--- a/assets/scss/base/_syntax.scss
+++ b/assets/scss/base/_syntax.scss
@@ -3,7 +3,7 @@
 @use '../abstracts/mixins' as mx;
 @use '../abstracts/placeholders';
 
-.highlighter-rouge {
+p > code {
   color: var(--highlighter-rouge-color);
   margin-top: 0.5rem;
   margin-bottom: 1.2em; /* Override BS Inline-code style */
@@ -63,7 +63,7 @@ code {
   hyphens: none;
   color: var(--code-color);
 
-  &.highlighter-rouge {
+  p > & {
     font-size: v.$code-font-size;
     padding: 3px 5px;
     word-break: break-word;
@@ -78,12 +78,12 @@ code {
     padding: 0;
   }
 
-  a > &.highlighter-rouge {
+  a > & {
     padding-bottom: 0; /* show link's underlinke */
     color: inherit;
   }
 
-  a:hover > &.highlighter-rouge {
+  a:hover > & {
     border-bottom: none;
   }
 
