--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -116,7 +116,7 @@
     {{ end }}
 
     <div class="content">
-      {{ partial "refractor-content.html" . }}
+      {{ partial "refactor-content.html" . }}
     </div>
 
     <div class="post-tail-wrapper text-muted">
