--- a/layouts/index.html
+++ b/layouts/index.html
@@ -70,7 +70,7 @@
               <h1 class="card-title my-2 mt-md-0">{{ .Title }}</h1>
 
               <div class="card-text content mt-0 mb-3">
-                <p>{{ .Description | default .Summary }}</p>
+                <p>{{ .Description | default .Summary | plainify }}</p>
               </div>
 
               <div class="post-meta flex-grow-1 d-flex align-items-end">
