--- a/assets/scss/base/_syntax.scss
+++ b/assets/scss/base/_syntax.scss
@@ -128,6 +128,8 @@ td.rouge-code {
   }
 
   padding-bottom: 0;
+  margin-top: .5rem;
+  margin-bottom: 1.2rem;
 
   .table-wrapper {
     margin-bottom: .75rem;
