fix: missing comments partial in post layout template

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -179,4 +179,5 @@
 {{ define "tail" }}
   {{ partial "related-posts.html" . }}
   {{ partial "post-nav.html" . }}
+  {{ partial "comment.html" . }}
 {{ end }}
