--- a/layouts/partials/language-selector.html
+++ b/layouts/partials/language-selector.html
@@ -1,10 +1,11 @@
 <div class="lang-dropdown">
   <select class="lang-select" onchange="location = this.value;">
     {{ $currentLang := .Site.Language.Lang }}
+    {{ $siteBase := strings.TrimSuffix "/" .Site.BaseURL }}
     {{ range .Site.Languages }}
-      <option value="/{{ .Lang }}/" {{ if eq .Lang $currentLang }}selected{{ end }}>
-        {{ .LanguageName }}
-      </option>
+    <option value="{{ $siteBase }}/{{ .Lang }}/" {{ if eq .Lang $currentLang }}selected{{ end }}>
+      {{ .LanguageName }}
+    </option>
     {{ end }}
   </select>
 </div>
