--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -34,12 +34,14 @@
         </li>
         <!-- .nav-item -->
       {{ end }}
-      <li class="nav-item mt-4">
-        <a class="nav-link no-hover">
-          <i class="fa-fw fas fa-language"></i>
-          {{ partial "language-selector.html" . }}
-        </a>
-      </li>
+      {{ if hugo.IsMultilingual }}
+        <li class="nav-item mt-4">
+          <a class="nav-link no-hover">
+            <i class="fa-fw fas fa-language"></i>
+            {{ partial "language-selector.html" . }}
+          </a>
+        </li>
+      {{ end }}
     </ul>
   </nav>
 
