fix: preview image height

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -59,7 +59,7 @@
             {{ end }}
 
             <div class="col-md-5">
-              <img src="{{ $src }}" alt="{{ $alt }}" {{ $lqip | safeHTMLAttr }}>
+              <img src="{{ $src }}" alt="{{ $alt }}" style="height: 100%; width: auto;" $lqip | safeHTMLAttr }}>
             </div>
 
             {{ $card_body_col = "7" }}
